# archaeo-pro

./: .env.example  .gitignore  .impeccable.md  CLAUDE.md  LICENSE  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  requirements.txt  vercel.json
backend/alembic/: env.py
backend/alembic/versions/: 20260507_0001_initial.py
backend/api/: index.py
backend/app/: config.py  db.py  main.py  payloads.py
backend/app/models/: __init__.py  surveillance.py
backend/app/routers/: documents.py  github_auth.py  ohm_export.py  photos.py  surveillances.py  wms_proxy.py
backend/app/schemas/: __init__.py  surveillance.py
backend/app/services/: docgen.py  ohm.py  pdf.py  wms.py
backend/tests/: test_docgen.py  test_ohm_exporter.py
docs/: architecture.md
frontend/: .gitignore  INIT.md  README.md  angular.json  netlify.toml  package-lock.json  package.json  proxy.conf.json
frontend/public/: _redirects
frontend/src/: index.html  styles.scss
frontend/src/app/: app.html  app.routes.ts  app.scss  app.spec.ts  app.ts
frontend/src/app/core/: api.service.ts  theme.service.ts
frontend/src/app/core/components/: photo-thumb.ts
frontend/src/app/core/github/: auth.guard.ts  auth.service.ts  client.ts
frontend/src/app/core/storage/: index-repo.ts  surveillance-store.ts
frontend/src/app/core/types/: surveillance.ts
frontend/src/app/core/utils/: image-resize.ts
frontend/src/app/features/auth-callback/: auth-callback.ts
frontend/src/environments/: environment.prod.ts  environment.ts
pdf-service/: .env.example  README.md  docker-compose.yml
(+18 files in other folders)
